some change and update

--- a/index.html
+++ b/index.html
@@ -65,38 +65,43 @@
 
                         <li><a href="index.html">Home</a></li>
                         <li><a href="pages/portfolio/potfolio.html">Portfolio</a></li>
-                        <div class="dropdown">
-                            <ul>
-                                <li><a class="dropbtn" href="#">manifesto</a></li>
-                            </ul>
-                            <div class="dropdown-content">
-                                <!-- drop dpwn menu -->
+                        <li>
+                            <div class="dropdown">
+                                <ul>
+                                    <li><a class="dropbtn" href="#">manifesto</a></li>
+                                </ul>
+                                <div class="dropdown-content">
+                                    <!-- drop dpwn menu -->
 
-                                <a href="pages/manifesto/bending.html">Bending</a>
-                                <a href="pages/manifesto/complte.html">completed</a>
+                                    <a href="pages/manifesto/bending.html">Bending</a>
+                                    <a href="pages/manifesto/complte.html">completed</a>
+                                </div>
                             </div>
-                        </div>
+                        </li>
 
                         <li><a href="pages/passt leaders/past leaders.html">past leaders</a></li>
 
-                        <div class="dropdown">
-                            <ul>
-                                <li><a class="dropbtn" href="">more</a></li>
-                            </ul>
-                            <div class="dropdown-content">
-                                <!-- drop down menu -->
+                        <li>
+                            <div class="dropdown">
+                                <ul>
+                                    <li><a class="dropbtn" href="">more</a></li>
+                                </ul>
+                                <div class="dropdown-content">
+                                    <!-- drop down menu -->
 
-                                <a href="pages/more/Governer list.html">Governer list</a>
-                                <a href="pages/more/mla.html">MLA list</a>
-                            </div>
+                                    <a href="pages/more/Governer list.html">Governer</a>
+                                    <a href="pages/more/mla.html">MLA list</a>
+                                </div>
+                        </li>
 
-                        </div>
+
 
                     </ul>
                 </nav>
             </div>
         </div>
     </div>
+    
 
     <!-- section1 -->
 
@@ -140,7 +145,7 @@
             </div>
 
             <div class="sideimage">
-                <img src="assets/images/backround.jpg" width="500px" height="305px" alt="error image">
+                <img src="assets/images/backround.jpg" alt="error image">
             </div>
 
         </div>
@@ -206,20 +211,20 @@
         <div class="news">
 
             <div class="news1">
-                <img src="assets/images/backround.jpg" width="300pxpx" alt="error image">
+                <img src="assets/images/backround.jpg" alt="error image">
                 <h2>politics</h2>
                 <p>mlmf;ldk;lfk;dkfjfnkvnfnv;lknf;lkvmoifm</p>
             </div>
 
             <div class="news1">
-                <img src="assets/images/backround.jpg" width="300pxpx" alt="error image">
+                <img src="assets/images/backround.jpg" alt="error image">
                 <h2>politics</h2>
                 <p>lkf;mflknlkjnflkvnfkblkmnblkjfn<br>l;kmglfdml;mflkm,fvm,fm;lvkmdf;km;lfkvm;lf
                 </p>
             </div>
 
             <div class="news1">
-                <img src="assets/images/backround.jpg" width="300px" alt="error image">
+                <img src="assets/images/backround.jpg" alt="error image">
                 <h2>politics</h2>
                 <p>mflfdklkdf;lvmdfjmclkdmfnpoj</p>
             </div>
@@ -232,7 +237,7 @@
     <div class="footer">
 
         <div class="foot">
-            
+
             <h1>politic</h1>
             <p>
 
