--- a/pages/manifesto/bending.html
+++ b/pages/manifesto/bending.html
@@ -54,33 +54,41 @@
 
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
-                        <div class="dropdown">
 
-                            <ul>
-                                <li><a class="dropbtn" href="">manifesto</a></li>
-                            </ul>
+                        <li>
+                            <div class="dropdown">
 
-                            <div class="dropdown-content">
-                                <a href="../manifesto/bending.html">Bending</a>
-                                <a href="../manifesto/complte.html">completed</a>
+                                <ul>
+                                    <li><a class="dropbtn" href="">manifesto</a></li>
+                                </ul>
+
+                                <div class="dropdown-content">
+                                    <a href="../manifesto/bending.html">Bending</a>
+                                    <a href="../manifesto/complte.html">completed</a>
+                                </div>
+
                             </div>
 
-                        </div>
+                        </li>
 
                         <li><a href="../passt leaders/past leaders.html">past leaders</a></li>
 
-                        <div class="dropdown">
+                        <li>
 
-                            <ul>
-                                <li><a class="dropbtn" href="">more</a></li>
-                            </ul>
+                            <div class="dropdown">
 
-                            <div class="dropdown-content">
-                                <a href="../more/Governer list.html">Governer list</a>
-                                <a href="../more/mla.html">MLA list</a>
+                                <ul>
+                                    <li><a class="dropbtn" href="">more</a></li>
+                                </ul>
+
+                                <div class="dropdown-content">
+                                    <a href="../more/Governer list.html">Governers</a>
+                                    <a href="../more/mla.html">MLA list</a>
+                                </div>
+
                             </div>
 
-                        </div>
+                        </li>
 
                     </ul>
 
@@ -93,7 +101,7 @@
     </div>
 
 
-        <!-- main page start -->
+    <!-- main page start -->
 
 
     <div class="manisurvey">
@@ -133,7 +141,7 @@
 
         </div>
 
-           <!-- rules page start -->
+        <!-- rules page start -->
 
         <div class="rules">
             <h2>1# fight for restoration</h2>
@@ -578,8 +586,8 @@
             <h2>45# Micro Watershed</h2>
             <hr>
             <button class="rulescolor">Pending</button>
-            <p><strong>status:</strong>New technologies like ‘Micro Watershed Management’ will be introduced for
-                ‘Dry Land Farming and Wasteland Development’. Government will provide cash incentives to farmers who
+            <p><strong>status:</strong>New technologies like Micro Watershed Management will be introduced for
+                Dry Land Farming and Wasteland Development. Government will provide cash incentives to farmers who
                 use dry land farming to produce micro grains
             </p>
         </div>
@@ -812,7 +820,7 @@
             <button class="rulescolor">Pending</button>
             <p><strong>status:</strong>The recommendations of the Meena Kumari committee (developed for Deep sea
                 fishing policies) may be detrimental to the welfare of fishermen and fishing industry in India and
-                in light of the same, DMK will urge the Central Government to withdraw the committee’s
+                in light of the same, DMK will urge the Central Government to withdraw the committees
                 recommendations.
             </p>
         </div>
@@ -993,7 +1001,7 @@
             <h2>93# Financial assistance</h2>
             <hr>
             <button class="rulescolor">Pending</button>
-            <p><strong>status:</strong>Financial assistance provided to members of Cooperative Handloom Weaver’s
+            <p><strong>status:</strong>Financial assistance provided to members of Cooperative Handloom Weavers
                 Savings and Security Scheme (CHWSSS) shall be increased from 1000 rupees to 2000 rupees.
             </p>
         </div>
@@ -1070,7 +1078,7 @@
             <hr>
             <button class="rulescolor">Pending</button>
             <p><strong>status:</strong> Milk will be provided to students in government and government-aided schools
-                in the morning to improve the students’ nutrition.
+                in the morning to improve the students nutrition.
             </p>
         </div>
         <div class="rules">
@@ -1232,10 +1240,10 @@
             </p>
         </div>
         <div class="rules">
-            <h2>123# Under Kalaignar’s rule</h2>
+            <h2>123# Under Kalaignars rule</h2>
             <hr>
             <button class="rulescolor">Pending</button>
-            <p><strong>status:</strong> Under Kalaignar’s rule, a single-window system was followed to attract
+            <p><strong>status:</strong> Under Kalaignars rule, a single-window system was followed to attract
                 investment, which has been done away by the present ADMK govt due to prevalent corruption. As a
                 result, the state has seen a massive decline in industrial growth. DMK will re-introduce the single
                 window system to encourage investments.
@@ -1309,7 +1317,7 @@
             <h2>132# Leather Parks</h2>
             <hr>
             <button class="rulescolor">Pending</button>
-            <p><strong>status:</strong>‘Leather Parks’ will be set up in several districts including Dindigul,
+            <p><strong>status:</strong>Leather Parks will be set up in several districts including Dindigul,
                 Vellore and Chennai.
             </p>
         </div>
@@ -1362,7 +1370,7 @@
             <hr>
             <button class="rulescolor">Pending</button>
             <p><strong>status:</strong>To encourage employment opportunities among youth, steps will be taken to
-                create new ‘Youth self-empowerment groups’ consisting of 15 persons. The members must be under 40
+                create new Youth self-empowerment groups consisting of 15 persons. The members must be under 40
                 years of age with a minimum academic qualification of grade 12 or an equivalent diploma in technical
                 education. Govt will provide 25 percent assistance, groups to invest 10 percent, and the remaining
                 amount shall be loaned through banks. Producers will be provided a 10percent incentive during the
@@ -1585,10 +1593,11 @@
             </p>
         </div>
         <div class="rules">
-            <h2>164# women’s marriage</h2>
+            <h2>164# women <sup>,</sup> s marriage</h2>
             <hr>
             <button class="rulescolor">Pending</button>
-            <p><strong>status:</strong>Financial assistance for women’s marriage through Annai Teresa Orphan Girl
+            <p><strong>status:</strong>Financial assistance for women <sub>,</sub> s marriage through Annai Teresa
+                Orphan Girl
                 Marriage Financial Assistance scheme will be raised from Rs 25,000 to Rs 30,000. 8 grams of 22 carat
                 gold will be provided
             </p>
@@ -1597,16 +1606,18 @@
             <h2>165# Financial assistance</h2>
             <hr>
             <button class="rulescolor">Pending</button>
-            <p><strong>status:</strong>Financial assistance for women’s marriage (for women who have studied till
+            <p><strong>status:</strong>Financial assistance for women <sup>,</sup> s marriage (for women who have
+                studied till
                 10th standard) through Moovalur Ramamirtham Ammaiyar Memorial Marriage Assistance Scheme will be
                 raised from Rs 25,000 to Rs 30,000. 8 grams of 22 carat gold will be provided.
             </p>
         </div>
         <div class="rules">
-            <h2>166# widowed women’s</h2>
+            <h2>166# widowed women <sup>,</sup> s</h2>
             <hr>
             <button class="rulescolor">Pending</button>
-            <p><strong>status:</strong>Financial assistance for widowed women’s remarriage through Dr. Dharmambal
+            <p><strong>status:</strong>Financial assistance for widowed women <sup>,</sup> s remarriage through Dr.
+                Dharmambal
                 Ammaiyar Ninaivu Widow Remarriage Scheme will be raised from Rs 25,000 to Rs 30,000. 8 grams of 22
                 carat gold will be provided.
             </p>
@@ -1653,7 +1664,7 @@
             <hr>
             <button class="rulescolor">Pending</button>
             <p><strong>status:</strong>DMK will urge to bring an amendment to enable states to allocate reservation
-                for MBCs, SCs and STs based on the respective state’s composition.
+                for MBCs, SCs and STs based on the respective state <sup>,</sup>s composition.
             </p>
         </div>
         <div class="rules">
@@ -1704,7 +1715,8 @@
             <h2>176# Viswakarma Community </h2>
             <hr>
             <button class="rulescolor">Pending</button>
-            <p><strong>status:</strong> The request to include ‘Viswakarma’ community in Most Backward Community
+            <p><strong>status:</strong> The request to include <sup>,</sup> Viswakarma <sup>,</sup> community in Most
+                Backward Community
                 (MBC) will be decided after careful deliberation.
             </p>
         </div>
@@ -1736,7 +1748,7 @@
             </p>
         </div>
         <div class="rules">
-            <h2>181# Sanitation Workers’ Welfare</h2>
+            <h2>181# Sanitation Workers <sup>,</sup> Welfare</h2>
             <hr>
             <button class="rulescolor">Pending</button>
             <p><strong>status:</strong>Improvised Solid Waste Management plan will be introduced in small and medium
@@ -1842,7 +1854,7 @@
             </p>
         </div>
         <div class="rules">
-            <h2>193# Trader’s Welfare</h2>
+            <h2>193# Trader<sup>,</sup> s Welfare</h2>
             <hr>
             <button class="rulescolor">Pending</button>
             <p><strong>status:</strong>Vendors that prefer to appeal against the Proposed Tax imposed by Business
@@ -1851,7 +1863,7 @@
             </p>
         </div>
         <div class="rules">
-            <h2>194# Trader’s Welfare</h2>
+            <h2>194# Trader <sup>,</sup> s Welfare</h2>
             <hr>
             <button class="rulescolor">Pending</button>
             <p><strong>status:</strong>New rent slabs will be introduced upon the review of existing high rents
@@ -2006,7 +2018,8 @@
             <h2>212# Katta Panchayat</h2>
             <hr>
             <button class="rulescolor">Pending</button>
-            <p><strong>status:</strong>To eradicate the illegal ‘Katta Panchayat’ system that has often widened the
+            <p><strong>status:</strong>To eradicate the illegal <sup>,</sup> Katta Panchayat <sup>,</sup> system that
+                has often widened the
                 social disparity among various communities and resulted in various crimes, a high level committee
                 headed by a retired High Court Judge and consisting of Secretaries from Home Department, Legal
                 Department, Senior Women Police Officer, Senior Newspaper Editor, and civil society organisation
@@ -2392,7 +2405,7 @@
             <hr>
             <button class="rulescolor">Pending</button>
             <p><strong>status:</strong>Trees will be planted along both sides of the Thiruvannamalai hill to improve
-                the region’s green cover.
+                the region <sup>,</sup> s green cover.
             </p>
         </div>
         <div class="rules">
@@ -2798,9 +2811,13 @@
         </div>
 
     </div>
+
     <!-- footer -->
+
     <div class="footer">
+
         <div class="foot">
+
             <h1>politic</h1>
             <p>
 
@@ -2812,8 +2829,8 @@
             <img src="../../assets/images/icon-pinterest.svg" alt="">
             <img src="../../assets/images/icon-twitter.svg" alt="">
 
-
         </div>
+
         <div class="foot1">
             <h1>IMPORTANT INFO</h1>
             <p>About Us</p>
@@ -2821,6 +2838,7 @@
             <p>Our Approch</p>
             <p>Statistics</p>
         </div>
+
         <div class="foot1">
             <p>IMPORTANT INFO</p>
             <p>Donet</p>
@@ -2828,10 +2846,12 @@
             <p>Volunteer form</p>
             <p>bloger</p>
         </div>
+
         <div class="foot1">
             <h1>instagram </h1>
             <p>not available for this page</p>
         </div>
+
     </div>
 
 </body>
