--- a/pages/more/Governer list.html
+++ b/pages/more/Governer list.html
@@ -10,21 +10,22 @@
 </head>
 
 <body>
-   <!-- background video -->
-    <div class="headvideo">
+
+    <!-- background video -->
+
+    <div class="headvideo1">
         <video autoplay muted loop id="myVideo">
             <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
         </video>
     </div>
 
-     <!-- total nav bar -->
+    <!-- allnav -->
 
     <div class="totalnav">
 
-
         <div class="headvideo1">
             <video autoplay muted loop id="myVideo">
-                <source src="../assets/images/Pattern - 85590.mp4" type="video/mp4">
+                <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
                 <track default />
             </video>
         </div>
@@ -34,7 +35,7 @@
         <div class="navbar">
 
             <div class="topic">
-                <h1>poltifact</h1>
+                <h1>POLITIFACT</h1>
             </div>
 
             <div class="topic1">
@@ -55,33 +56,48 @@
             </div>
 
             <div class="nav">
-                <nav aria-label="nav-menu">
-                    <ul>
-                        <li><a href="../../index.html">Home</a></li>
-                        <li><a href="../portfolio/potfolio.html">Portfolio</a></li>
 
-                        <div class="dropdown">
-                            <ul>
-                                <li><a class="dropbtn" href="">manifesto</a></li>
-                            </ul>
-                            <div class="dropdown-content">
-                                <a href="../manifesto/bending.html">Bending</a>
-                                <a href="../manifesto/complte.html">completed</a>
+                <nav aria-label="nav-menu">
+
+                    <ul>
+
+                        <li><a href="../../index.html">Home</a></li>
+                        <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
+
+                        <li>
+                            <div class="dropdown">
+
+                                <ul>
+                                    <li><a class="dropbtn" href="">manifesto</a></li>
+                                </ul>
+
+                                <div class="dropdown-content">
+                                    <a href="../manifesto/bending.html">Bending</a>
+                                    <a href="../manifesto/complte.html">completed</a>
+                                </div>
+
                             </div>
-                        </div>
+
+                        </li>
 
                         <li><a href="../passt leaders/past leaders.html">past leaders</a></li>
 
-                        <div class="dropdown">
-                            <ul>
-                                <li><a class="dropbtn" href="">more</a></li>
-                            </ul>
-                            <div class="dropdown-content">
-                                <a href="../more/Governer list.html">Governer list</a>
-                                <a href="../more/mla.html">MLA list</a>
+                        <li>
+
+                            <div class="dropdown">
+
+                                <ul>
+                                    <li><a class="dropbtn" href="">more</a></li>
+                                </ul>
+
+                                <div class="dropdown-content">
+                                    <a href="../more/Governer list.html">Governers</a>
+                                    <a href="../more/mla.html">MLA list</a>
+                                </div>
+
                             </div>
 
-                        </div>
+                        </li>
 
                     </ul>
 
