--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -11,7 +11,7 @@
 
 <body>
 
-     <!-- background video -->
+    <!-- background video -->
 
     <div class="headvideo1">
         <video autoplay muted loop id="myVideo">
@@ -63,33 +63,38 @@
 
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
-                        <div class="dropdown">
 
-                            <ul>
-                                <li><a class="dropbtn" href="">manifesto</a></li>
-                            </ul>
+                        <li>
 
-                            <div class="dropdown-content">
-                                <a href="../manifesto/bending.html">Bending</a>
-                                <a href="../manifesto/complte.html">completed</a>
+                            <div class="dropdown">
+                                <ul>
+                                    <li><a class="dropbtn" href="">manifesto</a></li>
+                                </ul>
+                                <div class="dropdown-content">
+                                    <a href="../manifesto/bending.html">Bending</a>
+                                    <a href="../manifesto/complte.html">completed</a>
+                                </div>
                             </div>
 
-                        </div>
+                        </li>
 
                         <li><a href="../passt leaders/past leaders.html">past leaders</a></li>
 
-                        <div class="dropdown">
+                        <li>
 
-                            <ul>
-                                <li><a class="dropbtn" href="">more</a></li>
-                            </ul>
+                            <div class="dropdown">
+                                <ul>
+                                    <li><a class="dropbtn" href="">more</a></li>
+                                </ul>
 
-                            <div class="dropdown-content">
-                                <a href="../more/Governer list.html">Governer list</a>
-                                <a href="../more/mla.html">MLA list</a>
+                                <div class="dropdown-content">
+                                    <a href="../more/Governer list.html">Governers</a>
+                                    <a href="../more/mla.html">MLA list</a>
+                                </div>
+
                             </div>
 
-                        </div>
+                        </li>
 
                     </ul>
 
@@ -433,7 +438,7 @@
                     <td>36,824</td>
                     <td>46.93 %</td>
                 </tr>
-                
+
                 <tr>
                     <td>32</td>
                     <td><a href="">Chengalpattu</a></td>
