--- a/pages/passt leaders/past leaders.html
+++ b/pages/passt leaders/past leaders.html
@@ -56,28 +56,36 @@
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
 
-                        <div class="dropdown">
-                            <ul>
-                                <li><a class="dropbtn" href="">manifesto</a></li>
-                            </ul>
-                            <div class="dropdown-content">
-                                <a href="../manifesto/bending.html">Bending</a>
-                                <a href="../manifesto/complte.html">completed</a>
+                        <li>
+
+                            <div class="dropdown">
+                                <ul>
+                                    <li><a class="dropbtn" href="">manifesto</a></li>
+                                </ul>
+                                <div class="dropdown-content">
+                                    <a href="../manifesto/bending.html">Bending</a>
+                                    <a href="../manifesto/complte.html">completed</a>
+                                </div>
                             </div>
-                        </div>
+
+                        </li>
 
                         <li><a href="../passt leaders/past leaders.html">past leaders</a></li>
 
-                        <div class="dropdown">
-                            <ul>
-                                <li><a class="dropbtn" href="">more</a></li>
-                            </ul>
-                            <div class="dropdown-content">
-                                <a href="../more/Governer list.html">Governer list</a>
-                                <a href="../more/mla.html">MLA list</a>
+                        <li>
+
+                            <div class="dropdown">
+                                <ul>
+                                    <li><a class="dropbtn" href="">more</a></li>
+                                </ul>
+                                <div class="dropdown-content">
+                                    <a href="../more/Governer list.html">Governers</a>
+                                    <a href="../more/mla.html">MLA list</a>
+                                </div>
+
                             </div>
 
-                        </div>
+                        </li>
 
                     </ul>
 
@@ -92,8 +100,7 @@
     <!-- piechart start -->
 
     <div class="piechart">
-        <img src="../../assets/images/Parties by total duration (in days) of holding Chief Minister's Office.svg"
-            alt="error image">
+        <img src="../../assets/images/Parties by total duration (in days) of holding Chief Minister's Office.svg" alt="error image">
     </div>
 
     <!-- start date list tables -->
@@ -106,7 +113,7 @@
 
                 <tr>
                     <th>S.no</th>
-                    <th>Political pparty</th>
+                    <th>Political party</th>
                     <th>Number of chief minister</th>
                     <th>Total days of holding CMO</th>
                 </tr>
@@ -608,7 +615,7 @@
         </div>
 
     </div>
-    
+
 </body>
 
 </html>
