--- a/pages/portfolio/potfolio.html
+++ b/pages/portfolio/potfolio.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>profiles</title>
-  <link rel="stylesheet" href="../../assets/css/main.css">
-</head>
+  <title>politifact</title>
+  <link href="../../assets/css/main.css" rel="stylesheet">
+
 
 <body>
-  <!-- total nav bar -->
+
+
+  <!-- navbar all -->
+
   <div class="totalnav">
 
     <div class="headvideo1">
@@ -20,7 +23,8 @@
       </video>
     </div>
 
-    <!-- navbar1 -->
+    <!-- navbar -->
+
     <div class="navbar">
 
       <div class="topic">
@@ -28,49 +32,63 @@
       </div>
 
       <div class="topic1">
-        <p><a style="text-decoration: none;" href="">contact</a></p>
+        <p><a style="text-decoration: none;" href="pages/your opinion/join now.html">contact</a></p>
         <p>|</p>
-        <p><a style="text-decoration: none;" href="">feedback</a></p>
+        <p><a style="text-decoration: none;" href="pages/your opinion/your opnion.html">feedback</a></p>
       </div>
 
     </div>
-    <!-- navbar2 -->
+
+    <!-- navbar1 -->
+
     <div class="navbar1">
 
       <div class="input">
         <input type="text" placeholder="search">
-        <img src="../../assets/images/3917132.svg" width="20px" height="20px" alt="">
+        <img src="../../assets/images/3917132.svg" width="20px" height="20px" alt="error image">
       </div>
 
       <div class="nav">
 
         <nav aria-label="nav-menu">
+
           <ul>
 
             <li><a href="../../index.html">Home</a></li>
-            <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
+            <li><a href="../portfolio/potfolio.html">Portfolio</a></li>
+            <li>
 
-            <div class="dropdown">
-              <ul>
-                <li><a class="dropbtn" href="">manifesto</a></li>
-              </ul>
-              <div class="dropdown-content">
-                <a href="../manifesto/bending.html">Bending</a>
-                <a href="../manifesto/complte.html">completed</a>
+              <div class="dropdown">
+                <ul>
+                  <li><a class="dropbtn" href="../manifesto/bending.html">manifesto</a></li>
+                </ul>
+                <div class="dropdown-content">
+
+                  <!-- drop dpwn menu -->
+
+                  <a href="../manifesto/bending.html">Bending</a>
+                  <a href="../manifesto/complte.html">completed</a>
+                </div>
+
               </div>
-            </div>
+            </li>
 
             <li><a href="../passt leaders/past leaders.html">past leaders</a></li>
 
-            <div class="dropdown">
-              <ul>
-                <li><a class="dropbtn" href="">more</a></li>
-              </ul>
-              <div class="dropdown-content">
-                <a href="../more/Governer list.html">Governer list</a>
-                <a href="../more/mla.html">MLA list</a>
-              </div>
-            </div>
+            <li>
+              
+              <div class="dropdown">
+                <ul>
+                  <li><a class="dropbtn" href="../more/mla.html">more</a></li>
+                </ul>
+                <div class="dropdown-content">
+                  <!-- drop down menu -->
+
+                  <a href="pages/more/Governer list.html">Governer</a>
+                  <a href="pages/more/mla.html">MLA list</a>
+                </div>
+
+            </li>
 
           </ul>
 
@@ -317,7 +335,7 @@
     </div>
 
   </div>
-  
+
 </body>
 
 </html>
