--- a/pages/more/daitails of mla/details of mla.html
+++ b/pages/more/daitails of mla/details of mla.html
@@ -63,33 +63,42 @@
 
                         <li><a href="../../../index.html">Home</a></li>
                         <li><a href="../../potfolio.html">Portfolio</a></li>
-                        <div class="dropdown">
 
-                            <ul>
-                                <li><a class="dropbtn" href="#">manifesto</a></li>
-                            </ul>
+                        <li>
 
-                            <div class="dropdown-content">
-                                <a href="../../manifesto/bending.html">Bending</a>
-                                <a href="../../manifesto/complte.html">completed</a>
+                            <div class="dropdown">
+
+                                <ul>
+                                    <li><a class="dropbtn" href="#">manifesto</a></li>
+                                </ul>
+
+                                <div class="dropdown-content">
+                                    <a href="../../manifesto/bending.html">Bending</a>
+                                    <a href="../../manifesto/complte.html">completed</a>
+                                </div>
+
                             </div>
 
-                        </div>
+                        </li>
 
                         <li><a href="../../passt leaders/past leaders.html">past leaders</a></li>
 
-                        <div class="dropdown">
+                        <li>
 
-                            <ul>
-                                <li><a class="dropbtn" href="">more</a></li>
-                            </ul>
+                            <div class="dropdown">
 
-                            <div class="dropdown-content">
-                                <a href="../../more/Governer list.html">Governer list</a>
-                                <a href="../../more/mla.html">MLA list</a>
+                                <ul>
+                                    <li><a class="dropbtn" href="">more</a></li>
+                                </ul>
+
+                                <div class="dropdown-content">
+                                    <a href="../../more/Governer list.html">Governers</a>
+                                    <a href="../../more/mla.html">MLA list</a>
+                                </div>
+
                             </div>
 
-                        </div>
+                        </li>
 
                     </ul>
 
@@ -1340,7 +1349,7 @@
         </div>
 
     </div>
-    
+
 </body>
 
 </html>
