--- a/pages/portfolio/potfolio.html
+++ b/pages/portfolio/potfolio.html
@@ -84,7 +84,7 @@
                 <div class="dropdown-content">
                   <!-- drop down menu -->
 
-                  <a href="pages/more/Governer list.html">Governer</a>
+                  <a href="pages/more/Governer list.html">Governers</a>
                   <a href="pages/more/mla.html">MLA list</a>
                 </div>
 
