--- a/pages/portfolio/profile/profile.html
+++ b/pages/portfolio/profile/profile.html
@@ -77,24 +77,22 @@
                                     <li><a class="dropbtn" href="">more</a></li>
                                 </ul>
                                 <div class="dropdown-content">
-                                    <a href="../../more/Governer list.html">Governer list</a>
+                                    <a href="../../more/Governer list.html">Governers</a>
                                     <a href="../../more/mla.html">MLA list</a>
-                            </div>
+                                </div>
 
                         </li>
 
+                    </ul>
+
+                </nav>
 
             </div>
-
-            </ul>
-
-            </nav>
-
         </div>
 
     </div>
 
-    </div>
+
 
     <!-- profile page start -->
     <div class="all">
