--- a/pages/your opinion/your opnion.html
+++ b/pages/your opinion/your opnion.html
@@ -10,14 +10,20 @@
 </head>
 
 <body>
+
     <!-- total nav bar -->
+
     <div class="totalnav">
+
         <div class="headvideo1">
             <video autoplay muted loop id="myVideo">
                 <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
-                <track default/>
+                <track default >
             </video>
+        </div>
+
         <!-- navbar1 -->
+
         <div class="navbar">
             <div class="topic">
                 <h1>POLITIFACT</h1>
@@ -28,44 +34,63 @@
                 <p><a style="text-decoration: none;" href="">feedback</a></p>
             </div>
         </div>
+
         <!-- navbar2 -->
+
         <div class="navbar1">
+
             <div class="input">
                 <input type="text" placeholder="search">
                 <img src="../../assets/images/3917132.svg" width="20px" height="20px" alt="error image">
             </div>
+
             <div class="nav">
+
                 <nav aria-label="nav-menu">
+
                     <ul>
+
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../portfolio/potfolio.html">Portfolio</a></li>
-                        <div class="dropdown">
-                            <ul>
-                                <li><a class="dropbtn" href="#">manifesto</a></li>
-                            </ul>
-                            <div class="dropdown-content">
-                                <a href="../manifesto/bending.html">Bending</a>
-                                <a href="../manifesto/complte.html">completed</a>
+
+                        <li>
+                            <div class="dropdown">
+                                <ul>
+                                    <li><a class="dropbtn" href="#">manifesto</a></li>
+                                </ul>
+                                <div class="dropdown-content">
+                                    <a href="../manifesto/bending.html">Bending</a>
+                                    <a href="../manifesto/complte.html">completed</a>
+                                </div>
                             </div>
-                        </div>
+
+                        </li>
 
                         <li><a href="../passt leaders/past leaders.html">past leaders</a></li>
 
-                        <div class="dropdown">
-                            <ul>
-                                <li><a class="dropbtn" href="">more</a></li>
-                            </ul>
-                            <div class="dropdown-content">
-                                <a href="../more/Governer list.html">Governer list</a>
-                                <a href="../more/mla.html">MLA list</a>
+                        <li>
+
+                            <div class="dropdown">
+                                <ul>
+                                    <li><a class="dropbtn" href="">more</a></li>
+                                </ul>
+                                <div class="dropdown-content">
+                                    <a href="../more/Governer list.html">Governers</a>
+                                    <a href="../more/mla.html">MLA list</a>
+                                </div>
+
                             </div>
 
-                        </div>
+                        </li>
 
                     </ul>
+
                 </nav>
+
             </div>
+
         </div>
+
     </div>
 
     <!-- main page start1 -->
@@ -118,9 +143,13 @@
             <button><a href="../../index.html">Submit</a></button>
         </form>
     </div>
+
     <!-- footer page start -->
+
     <div class="footer">
+
         <div class="foot">
+
             <h1>politic</h1>
             <p>
 
@@ -133,6 +162,7 @@
             <img src="../../assets/images/icon-twitter.svg" alt="error image">
 
         </div>
+
         <div class="foot1">
             <h1>IMPORTANT INFO</h1>
             <p>About Us</p>
@@ -140,6 +170,7 @@
             <p>Our Approch</p>
             <p>Statistics</p>
         </div>
+
         <div class="foot1">
             <p>IMPORTANT INFO</p>
             <p>Donet</p>
@@ -147,10 +178,12 @@
             <p>Volunteer form</p>
             <p>bloger</p>
         </div>
+
         <div class="foot1">
             <h1>instagram </h1>
             <p>not available for this page</p>
         </div>
+    </div>
 </body>
 
 </html>
