--- a/pages/more/daitails of mla/details of mla -english.html
+++ b/pages/more/daitails of mla/details of mla -english.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../../assets/css/main.css">
+    <link rel="stylesheet" href="../../../assets/css/english-version.css">
 </head>
 
 <body>
@@ -20,8 +20,6 @@
     </div>
 
     <!-- total nav -->
-
-
 
     <div class="totalnav">
 
@@ -41,9 +39,9 @@
             </div>
 
             <div class="topic1">
-                <p><a style="text-decoration: none;" href="">தொடர்பு</a></p>
+                <p><a href="">contact</a></p>
                 <p>|</p>
-                <p><a style="text-decoration: none;" href="">பின்னூட்டம்</a></p>
+                <p><a href="">feedback</a></p>
                 <p><a href="details of mla -english.html">English</a></p>
                 <p>|</p>
                 <p><a href="details of mla.html">தமிழ்</a></p>
@@ -66,33 +64,42 @@
 
                     <ul>
 
-                        <li><a href="../../../index.html">முகப்பு</a></li>
-                        <li><a href="../potfolio.html">விவரம்</a></li>
+                        <li><a href="../../home/homepage-english.html">Home</a></li>
+                        <li><a href="../../portfolio/potfolio-english.html">Portfolio</a></li>
 
                         <li>
+
                             <div class="dropdown">
+
                                 <ul>
-                                    <li><a class="dropbtn" href="#">அறிக்கைகள்</a></li>
+                                    <li><a class="dropbtn" href="#">manifesto</a></li>
                                 </ul>
+
                                 <div class="dropdown-content">
-                                    <a href="../../manifesto/bending.html">நிலுவை</a>
-                                    <a href="../../manifesto/complte.html">நிறைவு</a>
+                                    <a href="../../manifesto/bending-english.html">Bending</a>
+                                    <a href="../../manifesto/complte-english.html">completed</a>
                                 </div>
+
                             </div>
+
                         </li>
 
-                        <li><a href="../../passt leaders/past leaders.html">தலைவர்கள்</a></li>
+                        <li><a href="../../passt leaders/past leaders-english-english.html">past leaders</a></li>
 
                         <li>
 
                             <div class="dropdown">
+
                                 <ul>
-                                    <li><a class="dropbtn" href="">மேலும்</a></li>
+                                    <li><a class="dropbtn" href="">more</a></li>
                                 </ul>
+
                                 <div class="dropdown-content">
-                                    <a href="../../more/Governer list.html">ஆளுநர்கள்</a>
-                                    <a href="../../more/mla.html">பிரதிநிதிகள்</a>
+                                    <a href="../../more/Governer list-english.html">Governers</a>
+                                    <a href="../../more/mla-english.html">MLA list</a>
                                 </div>
+
+                            </div>
 
                         </li>
 
