--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
             </div>
 
             <div class="topic1">
-                <p><a style="text-decoration: none;" href="pages/your opinion/join now.html">contact</a></p>
+                <p><a style="text-decoration: none;" href="pages/your opinion/join now.html">தொடர்பு</a></p>
                 <p>|</p>
-                <p><a style="text-decoration: none;" href="pages/your opinion/your opnion.html">feedback</a></p>
+                <p><a style="text-decoration: none;" href="pages/your opinion/your opnion.html">பின்னூட்டம்</a></p>
+                <p><a href="pages/home/homepage-english.html">English</a></p>
+                <p>|</p>
+                <p><a href="index.html">தமிழ்</a></p>
             </div>
 
         </div>
@@ -63,34 +66,34 @@
 
                     <ul>
 
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="pages/portfolio/potfolio.html">Portfolio</a></li>
+                        <li><a href="index.html">முகப்பு</a></li>
+                        <li><a href="pages/portfolio/potfolio.html">விவரம்</a></li>
                         <li>
                             <div class="dropdown">
                                 <ul>
-                                    <li><a class="dropbtn" href="#">manifesto</a></li>
+                                    <li><a class="dropbtn" href="#">அறிக்கைகள்</a></li>
                                 </ul>
                                 <div class="dropdown-content">
                                     <!-- drop dpwn menu -->
 
-                                    <a href="pages/manifesto/bending.html">Bending</a>
-                                    <a href="pages/manifesto/complte.html">completed</a>
+                                    <a href="pages/manifesto/bending.html">நிலுவை</a>
+                                    <a href="pages/manifesto/complte.html">நிறைவு</a>
                                 </div>
                             </div>
                         </li>
 
-                        <li><a href="pages/passt leaders/past leaders.html">past leaders</a></li>
+                        <li><a href="pages/passt leaders/past leaders.html">தலைவர்கள் </a></li>
 
                         <li>
                             <div class="dropdown">
                                 <ul>
-                                    <li><a class="dropbtn" href="">more</a></li>
+                                    <li><a class="dropbtn" href="">மேலும்</a></li>
                                 </ul>
                                 <div class="dropdown-content">
                                     <!-- drop down menu -->
 
-                                    <a href="pages/more/Governer list.html">Governer</a>
-                                    <a href="pages/more/mla.html">MLA list</a>
+                                    <a href="pages/more/Governer list.html">ஆளுநர்கள்</a>
+                                    <a href="pages/more/mla.html">பிரதிநிதிகள்</a>
                                 </div>
                         </li>
 
@@ -101,24 +104,23 @@
             </div>
         </div>
     </div>
-    
+
 
     <!-- section1 -->
 
     <div class="section1">
 
         <h1>
-            you must be the<br> change you wish to see in the world
+            சுதந்திரமாக வாழ்வது மனிதனின் உரிமை. <br>அதுபோலவே மற்றவர்களைச் சார்ந்து வாழ்வது அவன் கடமை.
         </h1>
 
         <p>
-            Real change from the status quo will never come from
-            electing a politician -especilly not one who leads a that<br> status party dedicated to uppholiding
-            that
-            status quo.
+            தற்போதைய நிலையில் இருந்து உண்மையான மாற்றம் ஒரு<br> அரசியல்வாதியைத் தேர்ந்தெடுப்பதில் இருந்து ஒருபோதும் வராது
+            - குறிப்பாக அதை வழிநடத்துபவர் அல்ல.<br>
+            அந்த நிலையை நிலைநிறுத்த அர்ப்பணிக்கப்பட்ட அந்தஸ்து கட்சி.
         </p>
 
-        <button><a href="pages/your opinion/your opnion.html">your opnion</a></button>
+        <button><a href="pages/your opinion/your opnion.html">தங்களது கருத்து</a></button>
 
     </div>
 
@@ -135,11 +137,10 @@
             <div class="content1">
 
                 <h2>poltifact</h2>
-                <p>WE have to shed mutual bickering, shed the difference
-                    of being high or low and develop the sence of equality
-                    and banish untouchability. We have to restore the conditions
-                    of swaraj prevalen prior to British rule . We have to like the children
-                    of the same fahter.
+                <p>
+                    பரஸ்பர சண்டை சச்சரவுகளைக் களைந்து, உயர்ந்தவர் தாழ்ந்தவர் என்ற வேறுபாட்டைக் களைந்து சமத்துவ உணர்வை
+                    வளர்த்து, தீண்டாமையை ஒழிக்க வேண்டும். ஆங்கிலேயர் ஆட்சிக்கு முன் இருந்த சுயராஜ்ஜியத்தை நாம்
+                    மீட்டெடுக்க வேண்டும். அதே தந்தையின் குழந்தைகளை நாம் விரும்ப வேண்டும்.
                 </p>
 
             </div>
@@ -155,18 +156,17 @@
     <div class="section3">
         <div class="content">
 
-            <p>OUR CAMPAIGN IS POWERED<br> BY CONTRIBUTIONS
-                FROM SUPPORTERS LIKE YOU
+            <p>எங்கள் பிரச்சாரம் இயக்கப்படுகிறது<br>
+                உங்களைப் போன்ற ஆதரவாளர்களின் பங்களிப்புகளால்
             </p>
 
             <hr>
 
-            <h1>Become A <span> Volunteer</span></h1>
+            <h1><span>ஒரு தன்னார்வலராக</span> மாறுங்கள்</h1>
 
-            <h2>Just because you do not take an interest in politics doesn't mean politics won't<br>
-                azer duskam take an interest in you
+            <h2>நீங்கள் அரசியலில் ஆர்வம் காட்டவில்லை என்பதற்காக<br> நீங்கள் அரசாங்கத்தை மாற்ற விரும்புகிறீர்கள் என்று அர்த்தமல்ல.
             </h2>
-            <button><a href="pages/your opinion/join now.html">Join now</a></button>
+            <button><a href="pages/your opinion/join now.html">இப்போது சேரவும்</a></button>
         </div>
         <!-- section4 -->
         <div class="section4">
@@ -241,8 +241,8 @@
             <h1>politic</h1>
             <p>
 
-                There are many variations of passages of Lorem Ipsum available,
-                but the.There are many variations of passages
+                
+வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை ஏற்படுத்தும் ஒரு நேரத்தில் அதைச் செய்யட்டும்.
             </p>
             <img src="assets/images/icon-facebook.svg" alt="error image">
             <img src="assets/images/icon-instagram.svg" alt="error image">
@@ -252,24 +252,26 @@
         </div>
 
         <div class="foot1">
-            <h1>IMPORTANT INFO</h1>
-            <p>About Us</p>
-            <p>Annual Reports</p>
-            <p>Our Approch</p>
-            <p>Statistics</p>
+            <h1>முக்கியமான தகவல்</h1>
+            <p>
+                எங்களை பற்றி</p>
+            <p>ஆண்டு அறிக்கைs</p>
+            <p>எங்கள் அணுகுமுறை</p>
+            <p>புள்ளிவிவரங்கள்</p>
         </div>
 
         <div class="foot1">
-            <p>IMPORTANT INFO</p>
-            <p>Donet</p>
-            <p>Quick contact</p>
-            <p>Volunteer form</p>
-            <p>bloger</p>
+            <p>முக்கியமான தகவல்</p>
+            <p>
+                விரைவான தொடர்பு</p>
+            <p>
+                தன்னார்வ படிவம்</p>
+            <p>பதிவர்</p>
         </div>
 
         <div class="foot1">
-            <h1>instagram </h1>
-            <p>not available for this page</p>
+            <h1>instagram </h1>இந்தப் பக்கத்திற்குக் கிடைக்கவில்லை
+            <p>இந்தப் பக்கத்திற்குக் கிடைக்கவில்லை</p>
         </div>
 
     </div>
