--- a/pages/portfolio/potfolio-english.html
+++ b/pages/portfolio/potfolio-english.html
@@ -6,13 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>politifact</title>
-  <link href="../../assets/css/main.css" rel="stylesheet">
+  <link href="../../assets/css/english-version.css" rel="stylesheet">
 
 
 <body>
 
 
   <!-- navbar all -->
+
   <div class="totalnav">
 
     <div class="headvideo1">
@@ -22,7 +23,7 @@
       </video>
     </div>
 
-    <!-- navbar1 -->
+    <!-- navbar -->
 
     <div class="navbar">
 
@@ -31,18 +32,17 @@
       </div>
 
       <div class="topic1">
-        <p><a href="">தொடர்பு</a></p>
+        <p><a href="pages/your opinion/join now.html">contact</a></p>
         <p>|</p>
-        <p><a href="">பின்னூட்டம்</a></p>
-
-        <p><a href="../portfolio/potfolio-english.html">English</a></p>
+        <p><a href="pages/your opinion/your opnion.html">feedback</a></p>
+        <p><a href="potfolio-english.html">English</a></p>
         <p>|</p>
-        <p><a href="../portfolio/potfolio.html">தமிழ்</a></p>
+        <p><a href="potfolio.html">தமிழ்</a></p>
       </div>
 
     </div>
 
-    <!-- navbar2 -->
+    <!-- navbar1 -->
 
     <div class="navbar1">
 
@@ -57,41 +57,39 @@
 
           <ul>
 
-            <li><a href="../../index.html">முகப்பு</a></li>
-            <li><a href="../../pages/portfolio/potfolio.html">விவரம்</a></li>
-
+            <li><a href="../home/homepage-english.html">Home</a></li>
+            <li><a href="potfolio-english.html">Portfolio</a></li>
             <li>
+
               <div class="dropdown">
-
                 <ul>
-                  <li><a class="dropbtn" href="">அறிக்கைகள்</a></li>
+                  <li><a class="dropbtn" href="../manifesto/bending-english.html">manifesto</a></li>
                 </ul>
-
                 <div class="dropdown-content">
-                  <a href="../manifesto/bending.html">நிலுவை</a>
-                  <a href="../manifesto/complte.html">நிறைவு</a>
+
+                  <!-- drop dpwn menu -->
+
+                  <a href="../manifesto/bending-english.html">Bending</a>
+                  <a href="../manifesto/complte-english.html">completed</a>
                 </div>
 
               </div>
-
             </li>
 
-            <li><a href="../passt leaders/past leaders.html">தலைவர்கள்</a></li>
+            <li><a href="../passt leaders/past leaders-english-english.html">past leaders</a></li>
 
             <li>
 
               <div class="dropdown">
-
                 <ul>
-                  <li><a class="dropbtn" href="">மேலும்</a></li>
+                  <li><a class="dropbtn" href="../more/Governer list-english.html">more</a></li>
                 </ul>
-
                 <div class="dropdown-content">
-                  <a href="../more/Governer list.html">ஆளுநர்கள்</a>
-                  <a href="../more/mla.html">பிரதிநிதிகள்</a>
-                </div>
+                  <!-- drop down menu -->
 
-              </div>
+                  <a href="../more/Governer list-english.html">Governers</a>
+                  <a href="../more/mla-english.html">MLA list</a>
+                </div>
 
             </li>
 
@@ -110,9 +108,7 @@
 
     <div class="list1">
       <img src="../../assets/images/mk stalin.png" alt="error image">
-      <p>பெயர் : மு. க. ஸ்டாலின்</p>
-      <p>NAME: M. K. Stalin</p>
-      <p> பதவி: முதலமைச்சர்</p>
+      <h3>name: m.k. stalin</h3>
       <button><a href="../portfolio/profile/profile.html">view profile</a></button>
     </div>
 
@@ -121,225 +117,169 @@
   <div class="lists1">
     <div class="list2">
       <img src="../../assets/images/duraimurugan.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: Durai Murugan</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/kn neru.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: K. N. Nehru</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/periyasami.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: I. Periyasamy</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/ponkmudi.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: K. Ponmudy</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/velu.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:E. V. Velu</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/pannerselvam.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:M. R. K. Panneerselvam </h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/ranachanran.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:Ramachandran</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/tanarasu.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: Thangam Thennarasu</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/regubathy.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: S. Regupathy</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/muthusamy.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:S. Muthusamy</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/periyakaruppan.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: K. R. Periyakaruppan</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/anbarasan.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:T. M. Anbarasan</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/saminathan.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:M. P. Saminathan</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/geeth.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:P. Geetha Jeevan</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/anith.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:Anitha</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/sivakumar.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:S. S. Sivasankar</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/ramachandran.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:K. Ramachandran</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/sakkaraporni.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: R. Sakkarapani</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/sendil balji.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:V. Senthil Balaji</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/rs ganthi.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: R. Gandhi</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/subramani.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: M. Subramaniam</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/mirthi.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: P. Moorthy</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/rajakannapan.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name: Raja Kannappan</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/segar babu.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:P. K. Sekar Babu</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/palanivel.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:Palanivel Thiagarajan</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/nasar.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:S.M. Nasar</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/magesh.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:Anbil Mahesh</h3>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/mano.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <h3>name:Mano Thangaraj</h3>
       <button><a href="">view profile</a></button>
     </div>
 
